[project]
name = "tex2im"
version = "2.4.0"
description = "Create images from latex snippets."
dependencies = [
    "typer>=0.12.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"tex2im" = "tex2im:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "cram>=0.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tex2im"]
