[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "tex2im"
version = "2.5.1"
description = "Create images from latex snippets."
readme = "README.md"
authors = [
  { name = "CD Clark III", email = "clifton.clark@gmail.com" },
]
requires-python = ">=3.8"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "typer>=0.12.5",
]
scripts."tex2im" = "tex2im:app"

[dependency-groups]
dev = [
  "cram>=0.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/tex2im" ]

[tool.uv]
managed = true
